--- a/aws-docker-vpc.yml
+++ b/aws-docker-vpc.yml
@@ -16,79 +16,40 @@
     tags: test
   - debug: var=config
 
+
+  - include_role:
+      name: aws-vpc
+    vars:
+      prefix: "{{ config.app_name }}"
+      aws_region: "{{config.aws_region}}"
+      vpc_cidr_block: "{{ config.vpc_cidr_block }}"
+      vpc_routes: "{{ config.vpc_routes }}"
+      ssh_cidr_list: "{{ config.ssh_cidr_list }}"
+
+
+  - name: Set up security group for application access
+    ec2_group:
+      state: present
+      name: "{{ config.app_name }}-sg-app"
+      region: "{{ config.aws_region }}"
+      vpc_id: "{{ aws_vpc.vpc.id }}"
+      description: "Security group for {{ config.app_name }}."
+      rules: "{{ sg_http_rule }}"
+    register: tmp_sg
+
   - name: Create ECS role to manage cluster
     iam_role: 
-      name: "ecsServiceRole" 
+      name: "{{config.app_name}}-ecsServiceRole" 
       assume_role_policy_document: "{{ lookup('file','files/ecsrole-trust-policy.json') }}"
-      description: "ECS: arsnova cluster"
+      description: "ECS: {{config.app_name}} cluster"
       managed_policy:
         - "arn:{{config.arn_partition}}:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role"
         - "arn:{{config.arn_partition}}:iam::aws:policy/service-role/AmazonEC2ContainerServiceRole"
         - "arn:{{config.arn_partition}}:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
         - "arn:{{config.arn_partition}}:iam::aws:policy/AmazonECS_FullAccess"
         - "arn:{{config.arn_partition}}:iam::aws:policy/AmazonEC2FullAccess"
-    register: task_role
+    register: ecs_role
 
-  - name: Provision the VPC
-    ec2_vpc_net:
-      state: "present"
-      region: "{{ config.aws_region }}"
-      name: "{{ config.app_name }}-vpc"
-      cidr_block: "{{ config.vpc_cidr_block }}"
-    register: vpc
-  - debug: var=vpc
-
-  - name: Provision a subnet
-    ec2_vpc_subnet:
-      state: present
-      region: "{{ config.aws_region }}"
-      cidr: "{{ config.vpc_cidr_block }}"
-      map_public: no
-      vpc_id: "{{vpc.vpc.id}}"
-    register: vpc_subnet
-
-  - name: Provision an Internet gateway
-    ec2_vpc_igw:
-      state: "present"
-      region: "{{ config.aws_region }}"
-      vpc_id: "{{ vpc.vpc.id }}"
-      tags: "{ 'Name': '{{ config.app_name }}-igw' }"
-    register: vpc_igw
-
-
-  - name: Set up VPC routes
-    ec2_vpc_route_table:
-      state: "present"
-      region: "{{ config.aws_region }}"
-      vpc_id: "{{ vpc.vpc.id }}"
-      tags: "{ 'Name': '{{ config.app_name }}-rt' }"
-      subnets: "{{ item.subnets }}"
-      routes: "{{ item.routes }}"
-    register: vpc_rt
-    with_items: "{{ config.vpc_routes }}"
-
-  - name: "Security group: Create temporary SSH CIDR list"
-    set_fact:
-      tmp_entry:
-        proto: tcp
-        ports:
-        - 22
-        cidr_ip: "{{item}}"
-    with_items: "{{config.ssh_cidr_list}}"
-    register: sg_cidr_results
-
-  - name: "Security group: Create full rule list"
-    set_fact:
-      sg_rule_list: "{{sg_http_rule}} + {{ sg_cidr_results.results | map(attribute='ansible_facts.tmp_entry') |list }}"
-
-  - name: Set up security group
-    ec2_group:
-      state: present
-      name: "{{ config.app_name }}-sg"
-      region: "{{ config.aws_region }}"
-      vpc_id: "{{ vpc.vpc.id }}"
-      description: "Security group for {{ config.app_name }}."
-      rules: "{{sg_rule_list}}"
 
   - name: Create ECS cluster
     ecs_cluster:
@@ -114,14 +75,13 @@
       aws_region: "{{config.aws_region}}"
     with_items: "{{ images.stdout_lines }}"
 
-
   - name: Create task definition
     ecs_taskdefinition:
       state: present
       region: "{{ config.aws_region }}"
       family: "{{config.app_name}}-task"
       network_mode: bridge
-      task_role_arn: "{{ task_role.iam_role.arn }}"
+      task_role_arn: "{{ ecs_role.arn }}"
       containers:
       - name: nginx
         image: "{{config.aws_account_id}}.dkr.ecr.{{config.aws_region}}.amazonaws.com/arsnova/arsnova-nginx:latest"
@@ -175,27 +135,39 @@
       desired_count: 1
       task_definition: "{{config.app_name}}-task"
 
-  - debug: msg="instance_role = {{task_role.iam_role.arn}}"
+
+  - name: Find ECS AMIs
+    ec2_ami_facts:
+      filters:
+        state: [ "available" ]
+        owner-id: [ "580842271618" ]
+        architecture: [ "x86_64" ]
+        virtualization-type: [ "hvm" ]
+        description: "Amazon Linux AMI *"
+    register: tmp_amis
+
+  - name: Find latest ECS image
+    set_fact: ecs_ami="{{ tmp_amis.images |sort(reverse=True, attribute='name') |first }}"
+
   - name: Start ECS cluster instance
     ec2_instance:
       state: running
       region: "{{ config.aws_region }}"
       name: "{{config.app_name}}-{{item.name_suffix}}"
       cpu_credit_specification: standard
-      image_id: "ami-c6079ba7"
+      image_id: "{{ ecs_ami.image_id }}"
       instance_initiated_shutdown_behavior: stop
-      instance_role: "ecsServiceRole"
-#      instance_role: "{{task_role.iam_role.arn}}"
+      instance_role: "{{ecs_role.role_name}}"
       instance_type: t2.small
       key_name: "{{config.ssh_key_name}}"
       network:
         private_ip_address: "{{item.ip}}"
         assign_public_ip: yes
-      security_groups: ["{{ config.app_name }}-sg"]
+      security_groups: ["{{ config.app_name }}-sg-app","{{ aws_vpc.security_group.group_name }}"]
       user_data: |
         #!/bin/bash
         echo "ECS_CLUSTER={{config.app_name}}-ecs" >>/etc/ecs/ecs.config
-      vpc_subnet_id: "{{vpc_subnet.subnet.id}}"
+      vpc_subnet_id: "{{aws_vpc.subnet.id}}"
     with_items: "{{ config.ecs_containers }}"
 
 #  - name: Wait for instances to start
