--- a/example-config.yml
+++ b/example-config.yml
@@ -6,11 +6,14 @@ aws_account_id: 123456789
 # The target AWS region
 aws_region: us-east-2
 
-# ARN partition. You may need to update this if you are not using commercial AWS in the US
+# ARN partition for role policies. You may need to update this if you are not using commercial AWS in the US
 arn_partition: aws
 
 # AWS key name to allow SSH access to ECS Docker container instances
 ssh_key_name: keyname
+  
+# Allow SSH access from these IP blocks
+ssh_cidr_list: [ "192.168.1.5/32", "10.0.0.8/30" ]
 
 # Domain of the service
 app_domain: arsnova.example.com
@@ -41,6 +44,3 @@ ecs_containers:
 - name_suffix: container1
   ip: 10.101.0.10
 
-  
-# Allow SSH access from these IP blocks
-ssh_cidr_list: [ "192.168.1.5/32", "10.0.0.8/30" ]
